--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -22,16 +22,16 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="185dp"
+        android:layout_height="114dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="73dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.155"
-        app:srcCompat="@mipmap/logo" />
+        app:srcCompat="@mipmap/logo"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView5"
@@ -45,9 +45,9 @@
         android:textColor="@android:color/black"
         android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.319"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.053"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -63,28 +63,28 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/abttoolbar"
-        app:layout_constraintVertical_bias="0.198"
+        app:layout_constraintVertical_bias="0.391"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.052" />
+        app:layout_constraintHorizontal_bias="0.024" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="By :"
         android:textColor="@android:color/black"
         android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.277"
-        app:layout_constraintLeft_toRightOf="@+id/imageView4"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.04" />
+        app:layout_constraintVertical_bias="0.029"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.338" />
 
     <TextView
         android:id="@+id/textView8"
@@ -97,11 +97,11 @@
         android:text="Saravana, Gokul"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintLeft_toRightOf="@+id/textView7"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.037" />
 
     <TextView
         android:id="@+id/textView10"
@@ -116,10 +116,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="405dp"
-        app:layout_constraintHorizontal_bias="0.281"
-        app:layout_constraintLeft_toRightOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="0.428"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/abttoolbar"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintVertical_bias="0.121"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
