--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/colorPrimary"
-        app:title="  INBOX"
+        app:title="Inbox"
         app:titleTextColor="@android:color/background_light"
         android:id="@+id/toolbarInbox" />
 
