--- a/app/src/main/res/layout/item_inbox.xml
+++ b/app/src/main/res/layout/item_inbox.xml
@@ -16,6 +16,32 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="15dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Inbox_text"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.50"
+                android:id="@+id/buttonac1"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="Accept" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttondec1"
+
+                android:layout_weight="0.50"
+                android:text="Decline" />
+
+        </LinearLayout>
 
 
 
